# internal/api-server/main.go
@@ -7,9 +7,12 @@ import (
 	"os"
 	"time"
 
+	"github.com/Donders-Institute/filer-gateway/internal/api-server/config"
 	"github.com/Donders-Institute/filer-gateway/internal/api-server/handler"
+	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/models"
 	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/restapi"
 	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/restapi/operations"
+	"github.com/go-openapi/errors"
 	"github.com/go-openapi/loads"
 
 	"github.com/thoas/bokchoy"
@@ -24,6 +27,7 @@ var (
 	optsVerbose *bool
 	optsPort    *int
 	redisAddr   *string
+	configFile  *string
 )
 
 func init() {
@@ -31,6 +35,7 @@ func init() {
 	optsVerbose = flag.Bool("v", false, "print debug messages")
 	optsPort = flag.Int("p", 8080, "specify the service `port` number")
 	redisAddr = flag.String("r", "redis:6379", "redis service `address`")
+	configFile = flag.String("c", os.Getenv("FILER_GATEWAY_APISERVER_CONFIG"), "configurateion file `path`")
 
 	flag.Usage = usage
 
@@ -64,6 +69,13 @@ func usage() {
 }
 
 func main() {
+
+	// load global configuration
+	cfg, err := config.LoadConfig(*configFile)
+	if err != nil {
+		log.Fatalf("fail to load configuration: %s", *configFile)
+	}
+
 	// Initialize Swagger
 	swaggerSpec, err := loads.Analyzed(restapi.SwaggerJSON, "")
 	if err != nil {
@@ -104,6 +116,32 @@ func main() {
 
 	bok.Use(middleware.Recoverer)
 	bok.Use(middleware.DefaultLogger)
+
+	// authentication with api key.
+	api.APIKeyHeaderAuth = func(token string) (*models.Principle, error) {
+
+		if token != cfg.ApiKey {
+			return nil, errors.New(401, "incorrect api key auth")
+		}
+
+		// there is no user information attached, set the principle as empty string.
+		principle := models.Principle("")
+		return &principle, nil
+	}
+
+	// authentication with username/password.
+	api.BasicAuthAuth = func(username, password string) (*models.Principle, error) {
+
+		pass, ok := cfg.Auth[username]
+
+		if !ok || pass != password {
+			return nil, errors.New(401, "incorrect username/password")
+		}
+
+		// there is login user information attached, set the principle as the username.
+		principle := models.Principle(username)
+		return &principle, nil
+	}
 
 	// associate handler functions with implementations
 	api.GetTasksTypeIDHandler = operations.GetTasksTypeIDHandlerFunc(handler.GetTask(ctx, bok))
