# pkg/swagger/server/models/principle.go
@@ -1,0 +1,19 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+)
+
+// Principle principle
+// swagger:model principle
+type Principle string
+
+// Validate validates this principle
+func (m Principle) Validate(formats strfmt.Registry) error {
+	return nil
+}
