# pkg/swagger/server/restapi/operations/patch_projects_id.go
@@ -9,19 +9,21 @@ import (
 	"net/http"
 
 	middleware "github.com/go-openapi/runtime/middleware"
+
+	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/models"
 )
 
 // PatchProjectsIDHandlerFunc turns a function with the right signature into a patch projects ID handler
-type PatchProjectsIDHandlerFunc func(PatchProjectsIDParams) middleware.Responder
+type PatchProjectsIDHandlerFunc func(PatchProjectsIDParams, *models.Principle) middleware.Responder
 
 // Handle executing the request and returning a response
-func (fn PatchProjectsIDHandlerFunc) Handle(params PatchProjectsIDParams) middleware.Responder {
-	return fn(params)
+func (fn PatchProjectsIDHandlerFunc) Handle(params PatchProjectsIDParams, principal *models.Principle) middleware.Responder {
+	return fn(params, principal)
 }
 
 // PatchProjectsIDHandler interface for that can handle valid patch projects ID params
 type PatchProjectsIDHandler interface {
-	Handle(PatchProjectsIDParams) middleware.Responder
+	Handle(PatchProjectsIDParams, *models.Principle) middleware.Responder
 }
 
 // NewPatchProjectsID creates a new http.Handler for the patch projects ID operation
@@ -46,12 +48,25 @@ func (o *PatchProjectsID) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	}
 	var Params = NewPatchProjectsIDParams()
 
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal *models.Principle
+	if uprinc != nil {
+		principal = uprinc.(*models.Principle) // this is really a models.Principle, I promise
+	}
+
 	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
 		o.Context.Respond(rw, r, route.Produces, route, err)
 		return
 	}
 
-	res := o.Handler.Handle(Params) // actually handle the request
+	res := o.Handler.Handle(Params, principal) // actually handle the request
 
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
