# pkg/swagger/server/restapi/operations/post_projects.go
@@ -9,19 +9,21 @@ import (
 	"net/http"
 
 	middleware "github.com/go-openapi/runtime/middleware"
+
+	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/models"
 )
 
 // PostProjectsHandlerFunc turns a function with the right signature into a post projects handler
-type PostProjectsHandlerFunc func(PostProjectsParams) middleware.Responder
+type PostProjectsHandlerFunc func(PostProjectsParams, *models.Principle) middleware.Responder
 
 // Handle executing the request and returning a response
-func (fn PostProjectsHandlerFunc) Handle(params PostProjectsParams) middleware.Responder {
-	return fn(params)
+func (fn PostProjectsHandlerFunc) Handle(params PostProjectsParams, principal *models.Principle) middleware.Responder {
+	return fn(params, principal)
 }
 
 // PostProjectsHandler interface for that can handle valid post projects params
 type PostProjectsHandler interface {
-	Handle(PostProjectsParams) middleware.Responder
+	Handle(PostProjectsParams, *models.Principle) middleware.Responder
 }
 
 // NewPostProjects creates a new http.Handler for the post projects operation
@@ -46,12 +48,25 @@ func (o *PostProjects) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	}
 	var Params = NewPostProjectsParams()
 
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal *models.Principle
+	if uprinc != nil {
+		principal = uprinc.(*models.Principle) // this is really a models.Principle, I promise
+	}
+
 	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
 		o.Context.Respond(rw, r, route.Produces, route, err)
 		return
 	}
 
-	res := o.Handler.Handle(Params) // actually handle the request
+	res := o.Handler.Handle(Params, principal) // actually handle the request
 
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
