# pkg/swagger/server/restapi/operations/post_users.go
@@ -9,19 +9,21 @@ import (
 	"net/http"
 
 	middleware "github.com/go-openapi/runtime/middleware"
+
+	"github.com/Donders-Institute/filer-gateway/pkg/swagger/server/models"
 )
 
 // PostUsersHandlerFunc turns a function with the right signature into a post users handler
-type PostUsersHandlerFunc func(PostUsersParams) middleware.Responder
+type PostUsersHandlerFunc func(PostUsersParams, *models.Principle) middleware.Responder
 
 // Handle executing the request and returning a response
-func (fn PostUsersHandlerFunc) Handle(params PostUsersParams) middleware.Responder {
-	return fn(params)
+func (fn PostUsersHandlerFunc) Handle(params PostUsersParams, principal *models.Principle) middleware.Responder {
+	return fn(params, principal)
 }
 
 // PostUsersHandler interface for that can handle valid post users params
 type PostUsersHandler interface {
-	Handle(PostUsersParams) middleware.Responder
+	Handle(PostUsersParams, *models.Principle) middleware.Responder
 }
 
 // NewPostUsers creates a new http.Handler for the post users operation
@@ -46,12 +48,25 @@ func (o *PostUsers) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	}
 	var Params = NewPostUsersParams()
 
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal *models.Principle
+	if uprinc != nil {
+		principal = uprinc.(*models.Principle) // this is really a models.Principle, I promise
+	}
+
 	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
 		o.Context.Respond(rw, r, route.Produces, route, err)
 		return
 	}
 
-	res := o.Handler.Handle(Params) // actually handle the request
+	res := o.Handler.Handle(Params, principal) // actually handle the request
 
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
